# hydra-dvc-lightning

./: Dockerfile  Makefile  README.md  dvc.yaml  install_data.py  performance.py  pyproject.toml  requirements.txt  train.py
.dvc/: config
conf/: config.yaml
conf/data/: data.yaml
conf/model/: model.yaml
data/MNIST/: raw.dvc
meanvector/: __init__.py
meanvector/python/: bindings.cpp
meanvector/src/: MeanVector.cpp  MeanVector.h
meanvector/tests/: test_MeanVector.cpp
modules/: data_module.py  model.py
