[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "meanvector"
version = "1.0"
authors = [{name = "Valeria Zaborovskaia", email="valerizab@mail.ru"}]
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.8"
['version']

[tool.setuptools]
packages = ["meanvector"]

[tool.setuptools.package-data]
meanvector = [
    "python/*.so"
]